# approck

./: .gitattributes  .gitignore  Cargo.toml  LOCAL.toml  README.md  acp  pnpm-lock.yaml  pnpm-workspace.yaml
lib/: README.md
lib/acrm/: Cargo.toml
lib/acrm/src/: authstack_reader.rs  lib.rs
lib/approck/: Cargo.toml
lib/approck-compiler/: Cargo.toml  README.md  package.json
lib/approck-compiler/src/: codegen.rs  lib.rs
lib/approck-compiler/src/http_macro/: README.md  macro_request_line.rs  macro_return_types.rs  mod.rs  post_form_struct.rs  request_function_return.rs  request_function_signature.rs  tests.rs
lib/approck-compiler/src/http_macro/codegen/: mod.rs  path.rs  post_form.rs  query_string.rs
lib/approck-compiler/src/http_routing/: codegen.rs  filesystem.rs  inputfile.rs  mod.rs  route_tree.rs
lib/approck-example/: Cargo.toml  package.json
lib/approck-example-mod1/: Cargo.toml  package.json
lib/approck-example-mod1/src/: main.mts
lib/approck-example-mod1/src/web/: hello.rs  hello.ts
lib/approck-example-mod1/src/web/calculator/: mod.rs  mod.ts
lib/approck-example-mod2/: Cargo.toml  package.json
lib/approck-example-mod2/src/: moon_module.mts
lib/approck-example-mod2/src/web/: hello_moon.rs  mod.rs
lib/approck-example/src/: canvas_util.mts  lib.rs  main.rs  ui.rs  user.rs
lib/approck-example/src/web/: app.css  app.ts  index.rs  index.ts  mod.rs  pricing.rs
lib/approck-example/src/web/about/: help.rs  index.rs  mod.rs
lib/approck-example/src/web/api/v1/: list.rs
lib/approck-example/src/web/asset/: mod.rs
lib/approck-example/src/web/example/: index.rs  mod.rs  name.rs  pathcap1.rs  post1.rs  post2.rs  querystring1.rs  querystring2.rs  querystring3.rs  querystring4.rs  redis1.css  redis1.rs  redis1.ts  stream.rs  userlist1.rs  websocket1.rs  websocket1.ts
lib/approck-example/src/web/example/boxit/: ajax.rs  index.rs  index.ts  mod.rs
lib/approck-macros/: Cargo.toml  README.md
lib/approck-macros/src/: lib.rs
lib/approck/src/: lib.rs
lib/approck/src/server/: exports.rs  mod.rs  response.rs  websocket.rs
lib/approck/src/traits/: document.rs  email_delivery.rs  mod.rs
lib/appstruct/: Cargo.toml
lib/appstruct/src/: lib.rs
lib/bux/: Cargo.toml  package.json
lib/bux/src/document/: basic_plain.rs  mod.mts  mod.rs
lib/bux/src/element/: group.mts  group_sequence.mts  mod.mts
lib/bux/src/floater/: info_box.mcss  info_box.mts  mod.mcss  mod.mts  search_simple.mcss  search_simple.mts
lib/bux/src/fonts/: josefin_slab.mcss
lib/bux/src/input/text/: currency.mcss  currency.mts  integer.mcss  integer.mts  mod.mts  string.mcss  string.mts
lib/bux/src/modal/: mod.mcss  mod.mts
lib/bux/src/stepper/: mod.mts  struct.mts  struct_sequence.mts  value.mts
lib/bux/src/toolbar/: mod.mts
lib/garbage/: Cargo.toml
lib/garbage/src/: lib.rs
lib/granite/: Cargo.toml  package.json
lib/granite-compiler/: Cargo.toml
lib/granite-compiler/src/: lib.rs  tokenator.rs
lib/granite-compiler/src/postgres/: mod.rs
lib/granite-compiler/src/postgres/parser/: args.rs  mod.rs  row.rs  sql.rs
lib/granite-indexdb/: Cargo.toml  package.json
lib/granite-indexdb/src/: mod.mts
lib/granite-macros/: Cargo.toml
lib/granite-macros/src/: lib.rs
lib/granite-postgres/: Cargo.toml  README.md
lib/granite-postgres/src/: lib.rs
lib/granite-redis/: Cargo.toml
lib/granite-redis/src/: lib.rs
lib/granite/src/: lib.rs  mod.mts  rand.rs  util.mts  validation.mts
lib/granite/src/error/: macros.rs  mod.rs
meta/: README.md  dprint-0.45.0  esbuild-0.19.11  localhost.crt.pem  localhost.key.pem  localhost.sh  pnpm-8.15.3
meta/acp/: Cargo.toml
meta/acp/src/: build.rs  lib.rs  main.rs  process.rs  util.rs
meta/acp/src/aws_sdk/: build.rs  clean.rs  clone.rs  mod.rs
meta/acp/src/cli/: aws_sdk.rs  build.rs  check.rs  clean.rs  clippy.rs  doc.rs  fmt.rs  init.rs  mod.rs  run.rs  test.rs
meta/acp/src/parser/: crate_cargo_toml.rs  local_toml.rs  mod.rs  package_json.rs  pnpm_workspace_yaml.rs  workspace_cargo_toml.rs
