#vim:fileencoding=utf-8:ts=4:sw=4:sts=4:expandtab

[workspace]
members = [
    "lib/approck",
    "lib/approck-compiler",
    "lib/approck-example",
    "lib/approck-example-mod1",
    "lib/approck-example-mod2",
    "lib/approck-macros",
    "lib/appstruct", 
    "lib/bux",
    "lib/garbage", 
    "lib/granite", 
    "lib/granite-compiler", 
    "lib/granite-indexdb", 
    "lib/granite-macros", 
    "lib/granite-postgres", 
    "lib/granite-redis",
    "meta/acp", 
]


resolver = "2"

[workspace.dependencies]
approck = { path = "lib/approck" }
approck-compiler = { path = "lib/approck-compiler" }
approck-html = { path = "lib/approck-html" }
appstruct = { path = "lib/appstruct" }

granite = { path = "lib/granite" }
granite-postgres = { path = "lib/granite-postgres" }
granite-redis = { path = "lib/granite-redis" }

anyhow = "1.0.70"
async-trait = "0.1.77"
axum = "0.6.18"
axum-auth = "0.4.0"
axum-macros = "0.3.8"
axum-server = "0.5.1"
bb8 = "0.8.3"
bb8-postgres = "0.8.1"
bb8-redis = "0.15.0"
chrono = "0.4.35"
clap = "4.2.4"
console = "0.15.7"
dialoguer = "0.10.4"
dotenv = "0.15.0"
error-stack = "0.4.1"
futures = "0.3.28"
git2 = "0.17.1"
glob = "0.3.1"
hostname = "0.3.1"
html-escape = "0.2.13"
hyper = "0.14.27"
ignore = "0.4.22"
indexmap = "2.2.5"
indicatif = "0.17.3"
ipnetwork = "0.20.0"
json = "0.12.4"
lazy_static = "1.4.0"
lightningcss = "1.0.0-alpha.54"
maud = "0.25.0"
oauth2 = "4.4.2"
once_cell = "1.19.0"
openssl = "0.10.56"
petgraph = "0.6.4"
proc-macro2 = "1.0.67"
proc-macro2-diagnostics = "0.10.1"
quote = "1.0.33"
rand = "0.8.5"
redis = "0.25.2"
regex = "1.8.3"
reqwest = "0.11.18"
rustls = "0.21.6"
rustls-pemfile = "1.0.3"
serde = "1.0.166"
serde_json = "1.0.99"
serde_toml = "0.0.1"
serde_with = "3.0.0"
serde_yaml = "0.9.21"
sha2 = "0.10.8"
shell-quote = "0.3.0"
shell-words = "1.1.0"
syn = "2.0.37"
termcolor = "1.4.1"
thiserror = "1.0.43"
time = "0.3.25"
tokio = "1.29.1"
tokio-postgres = "0.7.10"
tokio-rustls = "0.24.1"
toml = "0.7.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
trust-dns-client = "0.22.0"
trust-dns-proto = "0.22.0"
urlencoding = "2.1.2"
ureq = "2.8.0"
zip = "0.6.6"
