[package]
name = "approck-example-mod2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.acp]
module = {}
extends = []

[dependencies]
approck = { workspace = true }
granite = { workspace = true }

serde = { workspace = true, features = ["derive"] }

[build-dependencies]
approck-compiler = { workspace = true }

