[package]
name = "approck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approck-macros = { path = "../approck-macros" }
granite = { workspace = true }


async-trait = { workspace = true }
futures = { workspace = true }
bytes = "1.5.0"

headers = "0.4.0"
mime = "0.3.17"
http = "1.0.0"
http-body-util = "0.1.0"
salvo_core = { version = "0.66.2", default-features = false, features = ["http1", "http2", "quinn", "rustls", "server"] }
salvo_extra = { version = "0.66.1", features = [
	"websocket",
], default-features = false }
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.110"
serde_qs = "0.12.0"
sync_wrapper = "0.1.2"
tokio = { version = "1.35.1", features = ["full"] }
url = "2.5.0"
maud = {workspace = true}
chrono = { workspace = true }
salvo = "0.66.2"
cookie = "0.18.1"
