[package]
name = "appstruct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
garbage = { path = "../garbage" }
hyper = { workspace = true }
maud = { workspace = true, features = ["axum-core", "axum"] }
redis = "0.23.3"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
