[package]
name = "bux"
version = "0.1.0"
edition = "2021"

[package.metadata.acp]
module = {}
extends = ["granite"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approck = { workspace = true }
granite = { workspace = true }
maud = { workspace = true }