[package]
name = "granite-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
granite-compiler = { path = "../granite-compiler" }

proc-macro2 = "1.0.67"
proc-macro2-diagnostics = "0.10.1"
quote = "1.0.33"
syn = { version = "2.0.37", features = ["full"] }
