[package]
name = "acp"
version = "0.1.17"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approck-compiler = { workspace = true }
granite = { workspace = true }
granite-postgres = { workspace = true }

clap = { workspace = true, features = ["derive", "color"] }
ignore = { workspace = true }
indexmap = { workspace = true, features = ["serde"]}
lightningcss = { version = "1.0.0-alpha.54", features = ["bundler"] }
petgraph = "0.6.4"
proc-macro2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_toml.workspace = true
serde_yaml.workspace = true
termcolor = {workspace = true }
tokio = { workspace = true, features = ["tokio-macros", "full"] }
toml = {workspace = true }
